just trying things

--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
     </nav>
   </header>
 
-  <picture>
-    <source media="(min-width: 1470px)" srcset="images/hero1470.jpg">
-    <source media="(min-width: 800px)" srcset="images/hero800.jpg">
-    <source media="(min-width: 400px)" srcset="images/hero400.jpg">
-    <img src="images/hero1470.jpg" alt="image of painted nike swoosh">
-  </picture>
-
-
-
-
   <main>
+    <div class="hero">
+      <picture>
+        <source media="(min-width: 1470px)" srcset="images/hero1470.jpg">
+        <source media="(min-width: 800px)" srcset="images/hero800.jpg">
+        <source media="(min-width: 400px)" srcset="images/hero400.jpg">
+        <img src="images/hero1470.jpg" alt="image of painted nike swoosh">
+      </picture>
+      <div class="hero-text">
+        <h1><strong>Nike</strong> </h1>
+        <p class="hero-p">Just Do It</p>
+      </div>
 
-    <h1><strong>Nike</strong> </h1>
-    <p><em>everyday, everyday, everyday</em> </p>
+    </div>
 
     <article>
       <h2>What We Do</h2>
