--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <main>
     <div class="hero">
-      <picture>
+      <picture class="blur">
         <source media="(min-width: 1470px)" srcset="images/hero1470.jpg">
         <source media="(min-width: 800px)" srcset="images/hero800.jpg">
         <source media="(min-width: 400px)" srcset="images/hero400.jpg">
@@ -50,7 +50,7 @@
     <article>
       <h2>What We Do</h2>
       <figure>
-        <img src="images/nikestore.jpg" alt="image of nike store" width="500" height="399">
+        <img src="images/nikestore500.jpg" alt="image of nike store" width="500" height="399">
       </figure>
       <p>Our Mission: At Nike, our mission is to bring inspiration and innovation to every athlete in the world. Whether
         you're a professional athlete or just starting out, we believe that everyone has the potential to achieve
@@ -61,7 +61,7 @@
     </article>
     <article>
       <h2>Products</h2>
-      <img src="images/airmax.jpg" alt="image of nike air max shoes" width="500" height="399">
+      <img src="images/airmax500.jpg" alt="image of nike air max shoes" width="500" height="399">
       <p> Our Products: Nike offers a wide range of products that are designed to meet the needs of athletes in all
         sports. From running shoes to basketball gear, we have everything you need to perform your best. Our products
         are made with the latest technology and materials, and are rigorously tested to ensure they meet our high
@@ -69,6 +69,10 @@
       </p>
       <a class="button" href="#">Learn More</a>
     </article>
+
+
+
+
 
 
     <aside>
@@ -86,6 +90,25 @@
     </svg>
   </main>
 
+  <section class="cards">
+    <a href="" class="card">
+      <img src="images/nikestore500.jpg" alt="nike store" width="500" height="330" loading="lazy">
+      <p>What We Do</p>
+    </a>
+    <a class="card">
+      <img src="images/airmax500.jpg" alt="air max" width="500" height="330" loading="lazy">
+      <p>Products</p>
+    </a>
+    <a class="card">
+      <img src="images/stadium500.jpg" alt="stadium" width="500" height="330" loading="lazy">
+      <p>Athletics</p>
+    </a>
+    <a class="card">
+      <img src="images/swoosh500.jpg" alt="nike swoosh" width="500" height="330" loading="lazy">
+      <p>blah blah</p>
+    </a>
+
+  </section>
 
   <svg>
     <symbol id="wheel" viewBox="0 0 120 120">
