try to fix header

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
   </main>
 
   <section class="cards">
+    <header class="sr-only"></header>
     <a href="" class="card">
       <img src="images/nikestore500.jpg" alt="nike store" width="500" height="330" loading="lazy">
       <p>What We Do</p>
