--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
     </svg>
   </main>
 
-  <section class="cards">
-    <header class="sr-only"></header>
+  <section class="cards sr-only">
     <a href="" class="card">
       <img src="images/nikestore500.jpg" alt="nike store" width="500" height="330" loading="lazy">
       <p>What We Do</p>
