--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
     </svg>
   </main>
 
-  <section class="cards sr-only">
-    <a href="" class="card">
+  <section class="cards">
+    <a class="card">
       <img src="images/nikestore500.jpg" alt="nike store" width="500" height="330" loading="lazy">
       <p>What We Do</p>
     </a>
