--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
     </svg>
   </main>
 
+
   <section class="cards">
+    <div class="sr-only"></div>
     <a class="card">
       <img src="images/nikestore500.jpg" alt="nike store" width="500" height="330" loading="lazy">
       <p>What We Do</p>
@@ -109,6 +111,7 @@
     </a>
 
   </section>
+
 
   <svg>
     <symbol id="wheel" viewBox="0 0 120 120">
