--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <header>
     <nav>
+      <span></span>
       <ul>
         <li><a>Home</a></li>
         <li><a href="about/">About</a></li>
